--- a/_posts/book/tdd/2020-04-29-tdd-04.md
+++ b/_posts/book/tdd/2020-04-29-tdd-04.md
@@ -559,54 +559,150 @@ list.size();-> at SimpleMockTest.testMockList(SimpleMockTest.Java:19)
     Actually, there were zero interactions with this mock.
 ```
 
-##### 검증에서 인자 값으로 사용되는 Argument Matcher
+
+
+##### a. 검증에서 인자 값으로 사용되는 Argument Matcher
 
 >**예시: verify(mockedList, times(5)).add( any() );**
 >
 >해석: 어떤 객체가 add 메소드의 인자로 와도 무방하고 대신 5번 호출됐다면 성공이란 뜻
 
-| 메소드                        | 설명                                                         |
-| ----------------------------- | ------------------------------------------------------------ |
-| any 타입                      | anyInteger( ), anyBoolean 등 Java 타입에 해당하는 any 시리즈가 있다. <br>이런 시리즈들은 null이거나 해당 타입이면 만족한다 |
-| anyCollection anyCollectionOf | List, Map, Set 등 Collection 객체이면 무방. anyCollectionOf는 anyCollection과 동일하다. 자연스런 문장을 위해 사용한다. |
-| argThat(HamcrestMatcher)      | Mockito도 Hamcrest Matcher를 사용하고 있다. Hamcrest에서 사용하던 Matcher를 그대로 이 부분에서 사용할 수 있다 |
-| eq                            | Argument Matcher가 한번 사용된 부분에선 Java의 타입을 그대로는 더 이상 쓸 수가 없다. verify(mock).add(anyString(), “item”); 즉, 위와 같이는 쓸 수 없다. 이럴 때 아래와 같이 eq를 이용한다. verify(mock).put(anyString(9), eq(“item”)); |
-| anyVararg                     | 여러 개의 인자를 지칭할 때 사용한다. <br>예시) <br> // verification mock.foo(1, 2); mock.foo(1, 2, 3, 4); verify(mock, times(2)).foo(anyVararg( )); // Stubbing: when(mock.foo(anyVararg( )).thenReturn(100); |
-|                               |                                                              |
-|                               |                                                              |
-|                               |                                                              |
-|                               |                                                              |
-|                               |                                                              |
-|                               |                                                              |
-|                               |                                                              |
+| 메소드                                | 설명                                                         |
+| ------------------------------------- | ------------------------------------------------------------ |
+| any 타입                              | anyInteger( ), anyBoolean 등 Java 타입에 해당하는 any 시리즈가 있다. <br>이런 시리즈들은 null이거나 해당 타입이면 만족한다 |
+| anyCollection<br>anyCollectionOf      | List, Map, Set 등 Collection 객체이면 무방. <br>anyCollectionOf는 anyCollection과 동일하다. |
+| argThat(HamcrestMatcher)              | Mockito도 Hamcrest Matcher를 사용하고 있다. <br>Hamcrest에서 사용하던 Matcher를 그대로 이 부분에서 사용할 수 있다 |
+| eq                                    | Argument Matcher가 한번 사용된 부분에선 Java의 타입을 그대로는 더 이상 쓸 수가 없다. <br>verify(mock).add(anyString(), “item”); <br>즉, 위와 같이는 쓸 수 없다. 이럴 때 아래와 같이 eq를 이용한다. verify(mock).put(anyString(9), eq(“item”)); |
+| anyVararg                             | 여러 개의 인자를 지칭할 때 사용한다. <br>예시) <br> // verification <br>mock.foo(1, 2); <br>mock.foo(1, 2, 3, 4); <br>verify(mock, times(2)).foo(anyVararg( )); <br><br>// Stubbing: <br>when(mock.foo(anyVararg( )).thenReturn(100); |
+| matches(String regex)                 | 정규식 문자열로 인자(argument) 대상을 지칭한다.              |
+| startswith(String)<br>endWith(String  | 특정 문자열로 시작하거나 끝나면 OK                           |
+| anyList<br>anyCollection <br>anySet   | anyMap의 좀 더 디테일한 버전이다. 해당 타입이기만 하면 OK    |
+| isA(Class)                            | 해당 클래스 타입이기만 하면 된다                             |
+| startswith(String)<br>endWith(String) | 특정 문자열로 시작하거나 끝나면 OK                           |
+| isNull                                | Null이면 OK                                                  |
+| isNotNull                             | null만 아니면 OK                                             |
 
 
 
+##### b. 순서검증
+
+* Stub으로 만들어진 Mock 객체 메소드의 호출 순서까지 검증하고 싶다면 InOrder 클래스를 이용한다.
+
+```java
+List firstMock = mock(List.class);
+List secondMock = mock(List.class);
+
+firstMock.add("item1");
+secondMock.add("item2");
+
+InOrder inOrder = inOrder(firstMock, secondMock);
+inOrder.verify(firstMock).add("item1");
+inOrder.verify(secondMock).add("item2");
+```
+
+*  add 메소드의 호출이 item1 → item2 순으로 이뤄지지 않았다면 실패로 간주
 
 
 
+#### Mockito의 특징적인 기능
+
+##### 1. void 메소드를 Stub으로 만들기
+
+> **doThrow(예외).when(Mock_객체).voidMethod();**
+
+* void 메소드는 리턴이 없어서 stub을 만들 일이 없다. 
+* 단, 예외 발생하는 경우 Stub으로 구현해야 함.
+* 이때 doThrow를 사용
+
+```java
+doThrow(new RuntimeException()).when(mockList).clear();
+```
+
+##### 2. 콜백으로 Stub 만들기 : thenAnswer
+
+* Mock은 보통 하드코딩된 값만 돌려줌
+* 그러나 특정 Mock 메소드에 대해 실제 로직을 구현하고자 할때 콜백 기법을 사용
+* 그러나 TDD 자체에서 권장하지 않음
+
+```java
+when(rs.getInt("no")).thenAnswer( new Answer<Integer>(){
+    public Integer answer(InvocationOnMock invocation) throws Throwable {
+        if (currentRecord = = null)
+        	throw new SQLException("access fields is empty");
+        return ((Integer)currentRecord[0]).intValue();
+    }
+});
+```
 
 
 
+##### 3. 실체 객체를 Stub으로 만들기 : SPY
+
+* 실 객체도 Mock으로 만들 수 있다.
+* 강력한 나머지 가끔 문제가 될 수 도 있다.
+* 서드파티(3rd Party) 제품, 고칠 수 없는 라이브러리만 남아 있는 코드에서만 사용
+* 모키토 저자는 왠만하면 spy 기능을 쓰는건 잘못됐다고 한다.
+
+* 참고로 final로 선언된 메소드는 stub으로 만들 수 없다. 
+
+```java
+ArrayList<String> realList = new ArrayList<String>();
+realList.add("Hello");
+System.out.println(realList.get(0));
+
+List mockedList = spy( realList );
+when(mockedList.get(0)).thenReturn("item");
+System.out.println(mockedList.get(0));
+//-----실행 결과-----
+Hello
+item
+```
 
 
 
+##### 4. 똑똑한 NULL 처리 : SMART NULLS
+
+* 스텁으로 만들지 않은 기본형 외의 값을 리턴하는 메소드는 null 값이 찍힌다.
+* 이렇게 만들어진건 null 에러를 유발
+* 필요에 따라 유용하게 기본값으로 찍히게 만드는 것이 SMART NULLS라는 방식
+
+```java
+List mockedList = mock(List.class);
+List smartMockedList = mock(List.class, RETURNS_SMART_NULLS);
+System.out.println(mockedList.toArray());
+System.out.println(smartMockedList.toArray());
+//-----실행 결과-----
+null
+[LJava.lang.Object;@3eca90
+```
+
+**SMART NULLS 규칙**
+
+1. 기본형 래퍼 클래스는 해당 기본형 값으로 바꾼다.
+2. String은 ""로 바꾼다.
+3. 배열은 크기 0인 기본 배열 객체로 만들어준다.
+4. Collection 계열은 빈 Collection 객체로 만든다.
 
 
 
+##### 5. 행위 주도 개발(BDD) 스타일 지원
 
+* Mockito는 //given //when //then 식의 행위 주도 개발(Behavior-Driven Development, BDD) 스타일로 테스트 케이스 작성할 수 있게 지원
+* BDD 스타 일을 사용하려면 Mockito 클래스 대신 BDDMockito를 static import 한다
 
+```java
+import static org.mockito.BDDMockito.*;
 
+Seller seller = mock(Seller.class);
+Shop shop = new Shop(seller);
 
-
-
-
-
-
-
-
-
-
-
-
+public void shouldBuyBread() throws Exception {
+    // given
+    given(seller.askForBread()).willReturn(new Bread());
+    // when
+    Goods goods = shop.buyBread();
+    // then
+    assertThat(goods, containBread());
+} 
+```
 
