--- a/_posts/spring/2020-04-28-spring-02.md
+++ b/_posts/spring/2020-04-28-spring-02.md
@@ -190,3 +190,129 @@ public ModelAndView openBoardDetail(@PathVariable("boardIdx") int boardIdx, Mode
 * POST는 HTTP 패킷의 파라미터를 같이 보냄
 * @RequestBody는 메서드의 파라미터가 반드시 HTTP 패킷의 바디에 담겨있어야 한다는 것을 의미
 * GET은 @RequestParam을 사용
+
+
+
+## JPA
+
+* 실제 프로젝트에서는 JPA 의 한 종류인 하이버네이트를 많이 사용
+
+* 하이버네이트는 스프링과 연동해야하고 새로 문법을 알아야하므로 여기선 스프링 데이터 프로젝트 하위 프로젝트인 스프링 데이터 JPA로 사용
+* 스프링 데이터 JPA는 JPA를 스프링에서 쉽게 사용할 수 있도록 도와주는 프레임워크
+
+### JPA란
+
+* Java Persistence API
+* 자바 객체와 DB 테이블 간의 매핑을 처리하는 ORM 기술의 표준
+* ORM이란 객체와 관계를 설정하는 것
+* 객체란 OOP의 객체를 말함
+* 관계란 개발자들이 사용하는 관계형 DB를 의미
+* 정리하면 OOP의 객체와 DB의 테이블 구조가 비슷해서 이를 맵핑시킨다는 개념(ORM)
+* 이러한 ORM 개념을 구현하기 위한 표준이 JPA
+* JPA는 각 기능의 동작이 어떻게 되어야 한다는 것을 정의한 기술 명세이기 때문에 기술 명세에 따라 실제로 기능을 구현한 구현체가 필요
+
+
+
+#### 장점
+
+1. 개발 편리
+2. DB에 독립적인 개발 가능
+3. 유지 보수 쉬움
+
+#### 단점
+
+1. 학습이 어려움
+2. DB 기능 사용 못함
+3. OOP 설계가 필요
+
+
+
+### 스프링 데이터 JPA란?
+
+
+
+#### 그전에 알아야할 스프링 데이터 구조
+
+![]({{site.url}}/assets/images/spring1.png)
+
+* 스프링 데이터 : SQL & NoSQL 저장소 지원 프로젝트의 묶음을 의미
+
+* 스프링 데이터 common : 여러 저장소 지원 프로젝트의 공통 기능 제공  (Repository, Bean 등)
+
+* 스프링 데이터 REST : 저장소의 데이터를 하이퍼 미디어 기반 HTTP 리소스로(REST API)로  제공하는 프로젝트
+
+* 스프링 데이터 JPA : 스프링데이터 Common 이 제공하는 기능에 JPA 관련 기능 추가
+
+
+
+#### 스프링 데이터 JPA란?
+
+* 하이버네이트는 엔티티메니저 설정하고 장벽이 있다.
+* 하지만 spring date JPA는 repository 인터페이스를 제공
+
+
+
+##### @EntityScan
+
+* 애플리케이션이 실행될 때 basePackages로 지정된 패키지 하위에서 JPA엔티티(@Entity 설정된 도메인 클래스)를 검색.
+* 여기에 원하는 클래스 등록
+
+
+
+#### 스프링 데이터 JPA 리포지터리 인터페이스
+
+![]({{site.url}}/assets/images/spring2.png)
+
+* CrudRepository 인터페이스는 CRUD 기능을 기본적으로 제공
+* PagingAndSortingRepository는 CrudRepository에 페이징, 정렬 기능 추가
+
+
+
+##### CrudRepository 제공 기본 메소드
+
+| 메서드                                                       | 설명                                              |
+| ------------------------------------------------------------ | ------------------------------------------------- |
+| < S extends T> save(S entity)                                | 주어진 엔티티를 저장                              |
+| < S extends T>  Iterable< S> saveAll (Iterable< S> entities) | 주어진 엔티티 목록을 저장                         |
+| Option< T> findById(Id id)                                   | 주어진 아이디로 식별된 엔티티를 반환              |
+| boolean existsById(Id id)                                    | 주어진 아이디로 식별된 엔티티가 존재하는지 반환   |
+| Iterable< T> findAll()                                       | 모든 엔티티를 반환                                |
+| Iterable< T> findAllById(Iterable< ID> ids                   | 주어진 아이디 목록에 맞는 모든 엔티티 목록을 반환 |
+| long count()                                                 | 사용 가능한 엔티티의 개수를 반환                  |
+| void deleteById(ID id)                                       | 주어진 아이디로 식별된 엔티티를 삭제              |
+| void delete(T entity)                                        | 주어진 엔티티를 삭제                              |
+| void deleteAll(Iterable<? extends T> entities)               | 주어진 엔티티 목록으로 식별된 엔티티를 모두 삭제  |
+| void deleteAll                                               | 모든 엔티티를 삭제                                |
+
+
+
+##### 쿼리 메서드
+
+* 스프링 데이터 JPA 규칙에 맞게 메서드를 추가하면 메서드 이름으로 쿼리를 생성
+* find ... By, read .... By, query ... By, count .... By, get .... By로 시작
+* By 뒤쪽은 컬럼이름 (즉, 검색 조건)
+* 예를 들어 BoardEntry의 제목으로 검색하려면 다음과 같이 작성 ex) findByTitle(String title);
+* 그러면 다음과 같은 JPQL문이 실행
+
+```sql
+select jpaboard0.board_idx as board_id1_0, ... 중략... 
+from t_jpa_board jpaboard0_
+where jpaboard0.title = ?
+```
+
+* 두 개 이상의 속성을 조합하려면 And 키워드를 사용하면 된다.
+
+```
+findByTitleAndContents(String title, String contents);
+```
+
+
+
+##### 비교연산자 아래 참조
+
+https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#jpa.repositories
+
+
+
+
+
