--- a/_posts/spring/2020-04-28-spring-02.md
+++ b/_posts/spring/2020-04-28-spring-02.md
@@ -5,7 +5,7 @@ classes: wide
 categories:
   - spring
 tags:
-  - [springboot, aop, REST, API, RESTful]
+  - [springboot, API, GCP]
 last_modified_at: 2020-04-20
 ---
 
@@ -314,5 +314,28 @@ https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#jpa.reposito
 
 
 
+### 구글 클라우드 플랫폼에 배포하기
 
 
+
+#### mysql 설치
+
+* mysql 설치 후 테이블 생성할 때 No database select가 뜬다
+* 뭐 grant하고 권한주라는데 다 꺼지고
+* select database(); 처보면 database 이름이 null란다
+* create database '원하는이름' 명령어 치고 테이블 생성하면 됨
+
+#### jdk, tomcat 설치
+
+* 책에서는 jdk, tomcat 다운받아서 GCP에 옮기라는데 이에 대한 설명이 없어서 조금(?) 방황.. ㅅㅂ
+* https://blog.naver.com/PostView.nhn?blogId=poolve&logNo=221780478060&parentCategoryNo=&categoryNo=15&viewDate=&isShowPopularPosts=true&from=search
+* 위에 블로그에서 참조한 영어 버전 유투브를 보면 파일 전송할 수 있는 방법이 잘 설명되어 있다.
+* putty key 생성 프로그램, 파일질라 client 다운 받아서 따라하면 가능
+* 파일질라 업로드시 "전송을 시작하지 못함" 이라는 오류 메시지의 경우 ssh 파일에서 파일의 권한을 주면 됨
+
+
+
+#### 젠킨스 설치
+
+* 책에서 하는대로 안된다
+* https://goddaehee.tistory.com/82 여기 따라하면 잘됨 굿
