--- a/_posts/spring/2020-04-28-spring-02.md
+++ b/_posts/spring/2020-04-28-spring-02.md
@@ -6,7 +6,7 @@ categories:
   - spring
 tags:
   - [springboot, API, GCP]
-last_modified_at: 2020-04-20
+last_modified_at: 2020-05-01
 ---
 
 
@@ -339,3 +339,88 @@ https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#jpa.reposito
 
 * 책에서 하는대로 안된다
 * https://goddaehee.tistory.com/82 여기 따라하면 잘됨 굿
+* 포트 입력하고 브라우저로 접속 시 안될 경우 인스턴스의 방화벽 설정 잘 보시길. 분명 거부이거나 포트 번호 잘못 쓴 경우가 많음.
+
+
+
+
+
+### 스웨거(Swagger)
+
+* 프로젝트 API 목록을 웹에서 확인 및 테스트 할 수 있게 해주는 라이브러리
+
+```java
+@Configuration
+@EnableSwagger2
+public class SwaggerConfiguration {
+	
+	@Bean
+    public Docket api() {
+        return new Docket(DocumentationType.SWAGGER_2)
+                .select()
+                .apis(RequestHandlerSelectors.basePackage("board"))
+            // board 패키지 내에 RequestMapping으로 할당된 모든 URL을 선택합니다.
+                .paths(PathSelectors.any())
+            // PathSelectors.any("/api/**")와 같이 사용하면 특정 URI를 가진 주소만 선택 가능
+                .build();
+    }
+}
+```
+
+
+
+### 스프링 클라우드 Config
+
+* 설정파일을 서버나 개발자들에게 효율적으로 배포하고 관리하기 위해 사용
+* 설정정보를 가지는 서버
+* 설정정보를 가지는 서버에서 필요한 정보만 가져오는 클라이언트로 구성
+
+![]({{site.url}}/assets/images/spring3.png)
+
+
+
+### YAML
+
+* 사람이 쉽게 읽을 수 있는 데이터 표현 형식
+* 계층 구조를 표한하기에 적합
+* 하나의 파일로 여러 개의 설정을 구분
+
+```properties
+# 프로퍼티스
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.allow-pool-suspension=true
+```
+
+```yaml
+# YAML
+spring:
+	datasource:
+		hikari:
+			connection-test-query: SELECT 1
+			allow-pool-suspension=true
+```
+
+
+
+### 비트버킷
+
+* 책에서 깃 저장소를 위해 github 또는 비트버킷을 사용하라고 한다. 
+* 비트버킷으로 책에서 설명해가는데 뜬금없이 레퍼지토리 만들라고 한다.
+* https://bitbucket.org/ 여기 들어가서 가입하고 만들면 된다;; 초보용 책이면 URL이라도 알려주지;;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
