--- a/_posts/codewar/2020-04-16-Codewar_26.md
+++ b/_posts/codewar/2020-04-16-Codewar_26.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 여섯 번째 문제"
 excerpt: "Gap in Primes"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-16
 ---
