--- a/_posts/codewar/2020-04-16-Codewar_27.md
+++ b/_posts/codewar/2020-04-16-Codewar_27.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 일곱 번째 문제"
 excerpt: "Duplicate Encoder"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-16
 ---
