--- a/_posts/codewar/2020-04-17-Codewar_28.md
+++ b/_posts/codewar/2020-04-17-Codewar_28.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 여덟 번째 문제"
 excerpt: "Convert string to camel case"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-17
 ---
