--- a/_posts/codewar/2020-04-20-Codewar_32.md
+++ b/_posts/codewar/2020-04-20-Codewar_32.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 두 번째 문제"
 excerpt: "Is my friend cheating?"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-20
 ---
