--- a/_posts/codewar/2020-04-21-Codewar_33.md
+++ b/_posts/codewar/2020-04-21-Codewar_33.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 세 번째 문제"
 excerpt: "Dubstep?"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-21
 ---
