--- a/_posts/codewar/2020-04-22-Codewar_36.md
+++ b/_posts/codewar/2020-04-22-Codewar_36.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 여섯 번째 문제"
 excerpt: "Playing with digits"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-22
 ---
