--- a/_posts/codewar/2020-04-27-Codewar_37.md
+++ b/_posts/codewar/2020-04-27-Codewar_37.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 일곱 번째 문제"
 excerpt: "Vasya - Clerk"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-27
 ---
