--- a/_posts/codewar/2020-04-29-Codewar_42.md
+++ b/_posts/codewar/2020-04-29-Codewar_42.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 두 번째 문제"
 excerpt: "Count the smiley faces!"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-29
 ---
