--- a/_posts/codewar/2020-04-30-Codewar_44.md
+++ b/_posts/codewar/2020-04-30-Codewar_44.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 네 번째 문제"
 excerpt: "Delete occurrences of an element if it occurs more than n times"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-30
 ---
