--- a/_posts/codewar/2020-04-30-Codewar_45.md
+++ b/_posts/codewar/2020-04-30-Codewar_45.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 다섯 번째 문제"
 excerpt: "Sort the odd"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-30
 ---
