--- a/_posts/codewar/2020-05-02-Codewar_48.md
+++ b/_posts/codewar/2020-05-02-Codewar_48.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 여덞 번째 문제"
 excerpt: "Write Number in Expanded Form"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-05-02
 ---
