--- a/_posts/codewar/2020-04-17-Codewar_29.md
+++ b/_posts/codewar/2020-04-17-Codewar_29.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 아홉 번째 문제"
 excerpt: "What's a Perfect Power anyway?"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-17
 ---
