--- a/_posts/codewar/2020-04-20-Codewar_31.md
+++ b/_posts/codewar/2020-04-20-Codewar_31.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 한 번째 문제"
 excerpt: "Find the missing letter"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-20
 ---
