--- a/_posts/codewar/2020-04-27-Codewar_38.md
+++ b/_posts/codewar/2020-04-27-Codewar_38.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 여덞 번째 문제"
 excerpt: "Find the unique number"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-27
 ---
