--- a/_posts/codewar/2020-04-28-Codewar_39.md
+++ b/_posts/codewar/2020-04-28-Codewar_39.md
@@ -3,9 +3,9 @@ title:  "CodeWar 서른 아홉 번째 문제"
 excerpt: "Are they the "same"?"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-28
 ---
