--- a/_posts/codewar/2020-04-28-Codewar_40.md
+++ b/_posts/codewar/2020-04-28-Codewar_40.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 번째 문제"
 excerpt: "Detect Pangram"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-28
 ---
