--- a/_posts/codewar/2020-04-29-Codewar_41.md
+++ b/_posts/codewar/2020-04-29-Codewar_41.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 한 번째 문제"
 excerpt: "Consecutive strings"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-29
 ---
