--- a/_posts/codewar/2020-04-30-Codewar_43.md
+++ b/_posts/codewar/2020-04-30-Codewar_43.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 세 번째 문제"
 excerpt: "Which are in?"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-30
 ---
