--- a/_posts/codewar/2020-05-02-Codewar_49.md
+++ b/_posts/codewar/2020-05-02-Codewar_49.md
@@ -3,9 +3,9 @@ title:  "CodeWar 마흔 아홉 번째 문제"
 excerpt: "Highest Scoring Word"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-05-02
 ---
