--- a/_posts/codewar/2020-05-04-Codewar_52.md
+++ b/_posts/codewar/2020-05-04-Codewar_52.md
@@ -1,6 +1,6 @@
 ---
 title:  "CodeWar 쉰 두 번째 문제"
-excerpt: "CamelCase Method"
+excerpt: "Mexican Wave"
 classes: wide
 categories:
   - CodeWars
@@ -10,7 +10,7 @@ tags:
 last_modified_at: 2020-05-04
 ---
 
-#### [CamelCase Method](https://www.codewars.com/kata/587731fda577b3d1b0001196)
+#### [Mexican Wave](https://www.codewars.com/kata/58f5c63f1e26ecda7e000029)
 
 ```java
 public static String[] wave(String str) {
