--- a/_posts/codewar/2020-05-07-Codewar_57.md
+++ b/_posts/codewar/2020-05-07-Codewar_57.md
@@ -1,6 +1,6 @@
 ---
 title:  "CodeWar 쉰 일곱 번째 문제"
-excerpt: "Two Sum"
+excerpt: "Reverse or rotate?"
 classes: wide
 categories:
   - CodeWars
@@ -10,7 +10,7 @@ tags:
 last_modified_at: 2020-05-07
 ---
 
-#### [Two Sum](https://www.codewars.com/kata/52c31f8e6605bcc646000082)
+#### [Reverse or rotate?](https://www.codewars.com/kata/56b5afb4ed1f6d5fb0000991)
 
 ```java
 public static String revRot(String strng, int sz) {
