카테고리 수정

--- a/_posts/codewar/2020-04-07-Codewar_01.md
+++ b/_posts/codewar/2020-04-07-Codewar_01.md
@@ -3,9 +3,9 @@ title:  "CodeWar 첫 번째 문제"
 excerpt: "remove space"
 
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
 last_modified_at: 2020-04-07
 ---
 
