--- a/_posts/codewar/2020-04-08-Codewar_02.md
+++ b/_posts/codewar/2020-04-08-Codewar_02.md
@@ -3,9 +3,9 @@ title:  "CodeWar 두 번째 문제"
 excerpt: "Multiples of 3 or 5"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-08
 ---
