--- a/_posts/codewar/2020-04-08-Codewar_03.md
+++ b/_posts/codewar/2020-04-08-Codewar_03.md
@@ -3,9 +3,9 @@ title:  "CodeWar 세 번째 문제"
 excerpt: "Human Readable Time"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
   - String
 last_modified_at: 2020-04-10
