--- a/_posts/codewar/2020-04-09-Codewar_07.md
+++ b/_posts/codewar/2020-04-09-Codewar_07.md
@@ -3,9 +3,9 @@ title:  "CodeWar 일곱 번째 문제"
 excerpt: "Sum of Digits / Digital Root"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-09
 ---
