--- a/_posts/codewar/2020-04-09-Codewar_10.md
+++ b/_posts/codewar/2020-04-09-Codewar_10.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 번째 문제"
 excerpt: "Number of trailing zeros of N!"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-09
 ---
