--- a/_posts/codewar/2020-04-10-Codewar_12.md
+++ b/_posts/codewar/2020-04-10-Codewar_12.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 두 번째 문제"
 excerpt: "Stop gninnipS My sdroW!"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-10
 ---
