--- a/_posts/codewar/2020-04-10-Codewar_15.md
+++ b/_posts/codewar/2020-04-10-Codewar_15.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 다섯 번째 문제"
 excerpt: "Find The Parity Outlier"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-11
 ---
