--- a/_posts/codewar/2020-04-10-Codewar_16.md
+++ b/_posts/codewar/2020-04-10-Codewar_16.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 여섯 번째 문제"
 excerpt: "Equal Sides Of An Array"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-11
 ---
