--- a/_posts/codewar/2020-04-16-Codewar_25.md
+++ b/_posts/codewar/2020-04-16-Codewar_25.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 다섯 번째 문제"
 excerpt: "Take a Ten Minute Walk"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-16
 ---
