--- a/_posts/codewar/2020-04-08-Codewar_04.md
+++ b/_posts/codewar/2020-04-08-Codewar_04.md
@@ -3,9 +3,9 @@ title:  "CodeWar 네 번째 문제"
 excerpt: "Find the odd int"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-08
 ---
