--- a/_posts/codewar/2020-04-08-Codewar_05.md
+++ b/_posts/codewar/2020-04-08-Codewar_05.md
@@ -3,9 +3,9 @@ title:  "CodeWar 다섯 번째 문제"
 excerpt: "Directions Reduction"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-08
 ---
