--- a/_posts/codewar/2020-04-09-Codewar_09.md
+++ b/_posts/codewar/2020-04-09-Codewar_09.md
@@ -3,9 +3,9 @@ title:  "CodeWar 아홉 번째 문제"
 excerpt: "Product of consecutive Fib numbers"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-09
 ---
