--- a/_posts/codewar/2020-04-10-Codewar_11.md
+++ b/_posts/codewar/2020-04-10-Codewar_11.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 한 번째 문제"
 excerpt: "Create Phone Number"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-10
 ---
