--- a/_posts/codewar/2020-04-10-Codewar_14.md
+++ b/_posts/codewar/2020-04-10-Codewar_14.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 네 번째 문제"
 excerpt: "Perimeter of squares in a rectangle"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-10
 ---
