--- a/_posts/codewar/2020-04-13-Codewar_18.md
+++ b/_posts/codewar/2020-04-13-Codewar_18.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 여덞 번째 문제"
 excerpt: "Bit Counting"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 6kyu
 last_modified_at: 2020-04-13
 ---
