--- a/_posts/codewar/2020-04-13-Codewar_19.md
+++ b/_posts/codewar/2020-04-13-Codewar_19.md
@@ -3,9 +3,9 @@ title:  "CodeWar 열 아홉 번째 문제"
 excerpt: "Greed is Good"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-13
 ---
