--- a/_posts/codewar/2020-04-14-Codewar_22.md
+++ b/_posts/codewar/2020-04-14-Codewar_22.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 두 번째 문제"
 excerpt: "Counting Duplicates"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-14
 ---
