--- a/_posts/codewar/2020-04-14-Codewar_23.md
+++ b/_posts/codewar/2020-04-14-Codewar_23.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 세 번째 문제"
 excerpt: "Integers: Recreation One"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-14
 ---
