--- a/_posts/codewar/2020-04-15-Codewar_24.md
+++ b/_posts/codewar/2020-04-15-Codewar_24.md
@@ -3,9 +3,9 @@ title:  "CodeWar 스물 네 번째 문제"
 excerpt: "Double Cola"
 classes: wide
 categories:
-  - CodeWar
+  - CodeWars
 tags:
-  - CodeWar
+  - CodeWars
   - 5kyu
 last_modified_at: 2020-04-15
 ---
