--- a/_posts/codewar/2020-04-28-Codewar_39.md
+++ b/_posts/codewar/2020-04-28-Codewar_39.md
@@ -1,6 +1,6 @@
 ---
 title:  "CodeWar 서른 아홉 번째 문제"
-excerpt: "Are they the "same"?"
+excerpt: "Are they the same?"
 classes: wide
 categories:
   - CodeWars
