--- a/_posts/major/os/2020-05-07-os-01.md
+++ b/_posts/major/os/2020-05-07-os-01.md
@@ -27,7 +27,7 @@ last_modified_at: 2020-05-07
 
 ### 운영체제의 기능
 
-![]({{site.url}}/assets/images/os1.png)
+![]({{site.url}}/assets/images/os1.PNG)
 
 * 운영체제의 핵심인 커널이 메모리에 상주
 * 나머지 프로그램들이 메모리를 차지하며 실행
@@ -45,6 +45,6 @@ last_modified_at: 2020-05-07
 
 ### 프로세스의 상태
 
-![]({{site.url}}/assets/images/os2.png)
+![]({{site.url}}/assets/images/os2.PNG)
 
 * CPU는  한 개 이기 때문에 여러 I/O 장치에서 보내는 요청을 큐에 대기
