--- a/_posts/book/tdd/2020-05-08-tdd-06.md
+++ b/_posts/book/tdd/2020-05-08-tdd-06.md
@@ -287,91 +287,353 @@ public void testPlayerPropertyTest() throws Exception {
 
 ![]({{site.url}}/assets/images/tdd6.PNG)
 
-
-
-```wiki
-* MS 엑셀 문서를 데이터셋으로 인식한다.
-* 엑셀 문서 내의 각 시트(sheet)를 테이블로 인식한다.
-* 시트의 첫 번째 줄을 컬럼 이름으로 인식한다.
-* 나머지 줄은 데이터 값으로 인식한다.
-```
-
-
-
-#### 5.3.5 ReplacementDataSet
-
-```wiki
-* 테이터셋에서 특정한 문자열을 치환하기 위해 사용한다.
-* 보통은 null 값을 다르게 표현하고 런타임 시에 치환하는 데 많이 사용한다.
-
-<dataset>
-	<EMPLOYEE NO="101" NAME="안병현" EMAIL="megane@hssm.kr"/>
-	<EMPLOYEE NO="102" NAME="김상옥" EMAIL="[null]"/>
-</dataset>
-
-* 위와 같은 데이터셋 파일을 만들고 아래와 같이 코드로 읽어드려서 null 값을 변환
-ReplacementDataSet dataSet = new ReplacementDataSet( new FlatXmlDataSet(……));
-dataSet.addReplacementObject("[NULL]", null);
-```
-
-
-
-### 5.4 DbUnit의 DB 지원 기능
-
-* 위에서 사용한 DatabaseOperation 클래스의 setUp 메소드 중 일부
+* Unitils는 DB, Hibernate, JPA, Spring, Mock Object에 대해서 유용한 기능을 모듈이라는 개념으로 제공
+* 이를 사용하기 위해 Test Listener가 필요
+* 상속 또는 @RunWith를 사용하여 Test Runner로 지정하면 됨
 
 ```java
-public void setUp() throws Exception{
-	DatabaseOperation.CLEAN_INSERT.execute(databaseTester.getConnection(), dataSet);
+//JUnit4의 사용법
+import org.junit.runner.RunWith;
+import org.unitils.UnitilsJUnit4TestClassRunner;
+
+@RunWith(UnitilsJUnit4TestClassRunner.class)
+public class MyTest {
+    
 }
 ```
 
-> #### 형식 : DatabaseOperation.오퍼레이션이름.execute( DB커넥션, 데이터셋 );
+* 아래의 소스를 기반으로 설명할 것이다.
+
+```java
+public class RepositoryTest {
+    private final String driver = "org.apache.derby.jdbc.EmbeddedDriver";
+    private final String protocol = "jdbc:derby:";
+    private final String dbName = "shopdb";
+    private IDatabaseTester databaseTester;
+    private IDatabaseConnection connection;
+    
+    @Before
+    public void setUp() throws Exception{
+        databaseTester = new JdbcDatabaseTester(driver, protocol + dbName);
+        connection = databaseTester.getConnection();
+        IDataSet dataSet = new FlatXmlDataSetBuilder().build(new File("seller.xml"));
+        DatabaseOperation.CLEAN_INSERT.execute(connection, dataSet);
+    }
+    
+    @After
+    public void tearDown() throws Exception{
+    	this.connection.close();
+    }
+    
+    @Test
+    public void testFindById() throws Exception {
+        Repository repository = new DatabaseRepository();
+        Seller actualSeller = repository.findById("horichoi");
+        assertPropertyLenientEquals("id", "horichoi", actualSeller);
+        assertPropertyLenientEquals("name", "최승호", actualSeller);
+        assertPropertyLenientEquals("email", "megaseller@hatmail.com", actualSeller);
+    }
+}
+```
 
 
 
-| 오퍼레이션 의 종류      | 설명                                                         |
+### 6.4 DbUnit과 함께 사용하는 데이터베이스 지원 모듈
+
+
+
+##### 환경 준비를 위한 unitils.properties, DatabaseRepositoryTest.xml 파일 설정
+
+```properties
+# unitils.properties
+database.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
+database.url=jdbc:derby:shopdb
+database.userName=
+database.password=
+database.schemaNames=APP
+database.dialect=derby
+DatabaseModule.Transactional.value.default=disabled
+# Derby DB 임베디드 모드의 기본 스키마 이름은 APP
+# database.dialect에는 Unitils에서 DB에 맞는 내부 SQL을 사용할 수 있게 DB 종류
+
+# 아래는 오라클일 경우
+database.driverClassName=oracle.jdbc.driver.OracleDriver
+database.url=jdbc:oracle:thin:@yourmachine:1521:YOUR_DB
+```
+
+* 책에서의 예제는 자동커밋 기준으로 작성됐기에, Unitils가 트랜잭션 처리를 하지 않도록 disabled로 지정
+* Unitils에서 DB 사용 시의 기본 트랙잭션 관리는 커밋
+
+```xml
+<!--> DatabaseRepositoryTest.xml </-->
+<?xml version='1.0' encoding='UTF-8'?>
+<dataset>
+ <seller ID="horichoi" NAME="최승호" EMAIL="megaseller@hatmail.com"/>
+ <seller ID="buymore" NAME="김용진" EMAIL="shopper@nineseller.com"/>
+ <seller ID="mattwhew" NAME="이종수" EMAIL="admin@maximumsale.net"/>
+</dataset>
+```
+
+
+
+#### 6.4.1 @DataSet
+
+* 클래스이름.xml이라는 파일을 기 본 데이터셋으로 인식하고 DB로 읽어들임
+* 이때 데이터셋 파일은 FlatXmlDataSet 타입
+* DB로 읽어들일 때의 기본 동작은 모두 삭제하고 집어넣는 CLEAN_ INSERT
+* 아래는 예제
+
+```java
+@RunWith(UnitilsJUnit4TestClassRunner.class) // ➊
+@DataSet // ➋
+public class DatabaseRepositoryTest {
+	@Test
+	public void testFindById() throws Exception {
+        Repository repository = new DatabaseRepository();
+        Seller actualSeller = repository.findById("horichoi");
+        assertPropertyLenientEquals("id", "horichoi", actualSeller); // ➌
+        assertPropertyLenientEquals("name", "최승호", actualSeller);
+        assertPropertyLenientEquals("email", "megaseller@hatmail.com", actualSeller);
+    }
+}
+```
+
+* 1 - Unitils 모듈 서비스를 이용하기 위해 Test Listener를 지정
+* 2 - 클래스 레벨에서 @DataSet이 사용되면 클래스이름.xml 파일을 데이터셋으로 인식한다. 그래서 DatabaseRepositoryTest.xml을 읽어드린다.
+* 3 - 비교
+
+* 클래스이름과 데이터셋 파일 이름이 일치하지 않는다면 직접 지정 가능
+* 또는 여러 개의 데이터셋 지정 가능
+
+```
+@DataSet("seller.xml")
+@DataSet("seller.xml", "item.xml")
+```
+
+* 클래스가 아닌 메소드 레벨에서도 지정 가능
+
+```java
+@Test
+@DataSet("DatabaseRepositoryTest.testAddNewSeller.xml")
+public void testAddNewSeller() throws Exception {
+    Seller newSeller = new Seller("hssm","이동욱","scala@hssm.kr");
+    Repository repository = new DatabaseRepository();
+}
+```
+
+
+
+##### 6.4.1.1 데이터셋 로드 전략
+
+* 데이터셋 사용하는 동작에 여러가지가 있다. (위에는 CLEAN_INSERT가 사용)
+* 두 가지 방식이 있다.
+
+```properties
+# unitils.properties에 설정한 경우
+DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy.InsertLoadStrategy
+```
+
+```java
+// 애노테이션으로 지정한 경우
+@DataSet(loadStrategy = InsertLoadStrategy.class)
+```
+
+* 아래는 종류. 자세한건 5장의 DbUnit의 DatabaseOperation 항목 보기
+
+| 종류                    | 설명                                                         |
 | ----------------------- | ------------------------------------------------------------ |
-| INSERT                  | * 데이터베이스에 데이터셋 내용을 INSERT <br>* PK(primary key)를 기 준으로 대상 테이블에 중복 데이터가 들어 있지 않다는 가정하에서 동 작하기 때문에 중복 데이터가 존재하면 실패로 간주<br>* FK(foreign key, 참조키)가 걸려 있는 테이블의 경우 데이터셋의 순서에 따라 정상 적으로 INSERT가 안 될 수 있으므로 유의한다 |
-| DELETE_ALL              | * 데이터셋에 지정된 테이블들의 데이터를 모두 지운다. 지정되지 않은 테이블들은 건드리지 않는다. |
-| CLEAN_INSERT            | * 데이터셋에 지정된 테이블에 대해 DELETE_ALL을 수행한 다음, 데이 터셋에 있는 데이터 값을 INSERT<br>* REFRESH와 함께 매우 잘 사용되는 기능이다. |
-| UPDATE                  | * 데이터셋의 내용으로 테이블을 업데이트                      |
-| REFRESH                 | * CLEAN_INSERT와 함께 가장 많이 사용되는 기능 <br>* 대상 테이블에 존 재하지 않는 데이터는 INSERT, 이미 존재하는 데이터일 경우에는 UPDATE한다. <br>* 둘 다에 속하지 않는, 이미 테이블에 존재하는 데이터는 건드리지 않는다. |
-| DELETE                  | * 데이터셋과 일치하는 데이터를 테이블에서 지운다. 테이블 전체를 지 우지는 않는다. |
-| TRUNCATE                | * 데이터셋에 지정된 테이블들의 데이터를 모두 지운다. <br>* TRUNCATE는 DELETE와 달리 롤백(rollback)이 불가능하다. <br>* 테이블 데이터 삭제 작 업은 데이터셋에 지정된 테이블 순서의 역순으로 적용된다. |
-| CompositeOperation      | * 여러 개의 DatabaseOperation을 하나로 묶어서 한 번에 실행한다. <br>* 이런 방식을 DatabaseOperation 클래스를 데코레이트 한다고 표현한다. DatabaseOperation op = new CompositeOperation( 　　　　　　　DatabaseOperation.DELETE_ALL, DatabaseOperation.INSERT); op.execute(connection, xmlDataSet); <br>* 위 코드는 DELETE_ALL과 INSERT를 하나의 DatabaseOperation으로 묶은 모습이다. |
-| TransactionOperation    | * 데이터셋을 처리할 때 트랜잭션으로 묶어서 처리할 것인지를 결정한 다. <br>* DatabaseOperation 클래스를 데코레이트한다. <br>DatabaseOperation op = new CompositeOperation( 　　　　　　　DatabaseOperation.DELETE_ALL, 　　　　　　　DatabaseOperation.INSERT); op = new TransactionOperation(operation); op.execute(connection, xmlDataSet); <br>* 중간에 실패하면 전부 롤백 |
-| IdentityInsertOperation | * MS SQL 서버의 IDENTITY 컬럼을 잠시 비활성화시킨 상태로 만들어 INSERT 시에 오류가 발생하지 않도록 도와준다. <br>* IDENTITY 컬럼은 자동으로 숫자가 증가해서 입력되는 컬럼으로, 특정 값을 강제로 넣는 것이 일반적인 INSERT 문으로는 불가능하다. |
-
-##### 데코레이트란?
-
-* 대상이 되는 객체를 감싸서 객체의 기능을 확장하는 기법
-* 뭔소리지? 이해불가.
+| CleanInsertLoadStrategy | 대상 테이블의 내용을 모두 지우고 데이터셋의 내용을 INSERT한다. |
+| InsertLoadStrategy      | 데이터셋을 INSERT만 한다.                                    |
+| RefreshLoadStrategy     | 데이터셋의 내용으로 DB를 갱신한다. <br>이미 존재하는 데이터는 UPDATE, 없 는 데이터는 INSERT한다. |
+| UpdateLoadStrategy      | DB에 존재하는 데이터를 UPDATE한다.                           |
 
 
 
+#### 6.4.2 @TestDataSource, 테스트에 사용하는 데이터소스 접근하기
+
+* 지금까지는 설정파일에 지정된 DB 값을 이용해 DataSource를 구성해 자동으로 DB 연결을 만들어 테스트를 진행하도록 설계되었다.
+* 그러나 경우에 따라서 데이터소스에 직접 접근할 필요가 있다.
+* 이를 위해 두 가지 경우가 있다.
+
+```java
+public class ShopDAOTest extends UnitilsJUnit4 {
+    @TestDataSource // - 1
+    private DataSource dataSource;
+    private ShopDAO dao
+   
+    @Before
+    public void initialize () {
+    	this.dao = new ShopDAO();
+    	dao.setDataSource(dataSource);
+        //dao.setDataSource(DatabaseUnitils.getDataSource()); - 2
+    }
+}
+```
+
+* 1 - 어노테이션 이용
+* 2 -  DatabaseUnitils.getDataSource() 메소드를 이용
 
 
-#### 5.5장은 Ant로 예를 드는데 요즘은 안쓰므로 gradle로 쓰는 것을 찾아보자
 
-* 따로 이는 포스팅하자
+#### 6.4.3 @ExpectedDataSet, 예상 데이터셋을 이용한 테스트 메소드 레벨의 결과 비교
+
+* 때로는 결과값을 비교할 때도 있음
+* DbUnit에서는 예상값과 마찬가지로 데이터셋으로 만들어서 상태를 비교
+* Unitils에서는 이럴 때 사용할 수 있도록 @ExpectedDataSet 제공
+* 기존의 코드 예제
+
+```java
+@Test
+public void testAddNewSeller() throws Exception {
+    Seller newSeller = new Seller("hssm","이동욱","scala@hssm.kr");
+    Repository repository = new DatabaseRepository();
+    repository.add(newSeller);
+    
+    ITable actualTable = connection.createQueryTable("SELLER", "select * from seller");
+    IDataSet expectedDataSet = new FlatXmlDataSetBuilder().build(
+    new File("expected_seller.xml"));
+    
+    ITable expectedTable = expectedDataSet.getTable("seller");
+    
+    Assertion.assertEquals(expectedTable, actualTable);
+}
+```
+
+* 아래는 @ExpectedDataSet 한 예제
+
+```java
+@Test
+@ExpectedDataSet("expected_seller.xml")
+public void testAddNewSeller() throws Exception {
+    Seller newSeller = new Seller("hssm","이동욱","scala@hssm.kr");
+    Repository repository = new DatabaseRepository();
+    repository.add(newSeller);
+}
+```
+
+* 직접 예상 데이터셋을 지정하지 않는다면 '‘클래스이름.메소드이름-result.xml' 형식의 파일을 찾음
 
 
 
-### 5.6 정리
+#### 6.4.4 @Transactional, 트랜잭션 처리
 
-* DbUnit을 사용하는 것은 어렵지 않다.
-* 단지 만드는 비용과 노력이 많이 든다. 
-* 따라서 DB를 사용할 때 반드시 사용할지 고민할 필요가 있다.
-* 단순히 SQL 파일을 테스트 전후로 실행하는 편이 더 나을 수도 있다.
+##### 트랜잭션이란
+
+* 하나의 업무가 완결성을 갖고 정상처리되기 위해 필요한 하위 업무나 기능들의 집합.
+* 중간에 하나라도 오류가 발생시 이전에 처리된 업무가 시작 시점으로 돌아감.
+* 흔히 DB에서 DML 문장이 모두 성공하면 커밋, 실패하면 롤백의 상황을 지칭
 
 
 
-#### 5.6.1 권장 사용법
+* 기본적으로 Unitils의 DB 기능을 테스트에 수행하면 모든 테스트는 트랜잭션이 발생하는 상태로 동작하고 테스트 마지막에 커밋이 발생.
+* 따라서 자신이 사용하는 DB가 트랜잭션을 지원하는지 봐야함
+* 자신의 코드가 트랜잭션으로 동작해도 무방한지 고려해야함
+* 적용하는 방법은 두 가지가 있다.
+* 지정 가능 상태는 commit, rollback, disabled 세 가지가 있다.
+* 위의 예제들은 자동 커밋 상태를 만들기 위해 Unitils의 트랜잭션 기능을 disable로 만들었다.
+* 아래 예제는 테스트 케이스 수행 후 rollback처리 하도록 만듬.
 
-* 개발자마다 데이터베이스 인스턴스나 스키마를 하나씩 쓸 수 있게 하라.
-* 나중에 정리(tearDown)할 필요가 없도록 setUp 처리를 잘 하자.
-* 데이터셋 크기는 작게하고 여러개 만들어라. 꼭 필요한 테스트 데이터 위주로 만들자
-* 데이터셋을 너무 만들지 마라. 유지보수가 힘들다
-* 데이터셋은 테스트 클래스 기반으로 만들고 여러 테스트 클래스와 공유해서 사용하지 말자
-* 테스트용 데이터베이스에서는 참조키나 널값 제약 기능을 꺼놓으면 편리하다.
+```properties
+# unitiils.properties 파일에 설정한 경우
+DatabaseModule.Transactional.value.default=rollback
+```
+
+```java
+// @Transactional 애노테이션으로 지정한 경우
+@Transactional(TransactionMode.ROLLBACK)
+public class ShopDaoTest extends UnitilsJUnit4 {}
+```
+
+* Unitils는 트랜잭션 관련 기능을 구현하는 데 스프링 프레임워크의 트랜잭 션 관리 기능을 전적으로 차용해서 사용했음.
+* 의존 라이브러리를 열어보면 spring 라이브러리들이 들어 있는 것을 확인할 수 있다.
+
+
+
+
+
+### 6.5 DBMaintainer: DB를 자동으로 유지보수해주는 DB 유지보수 관리자
+
+*  DBMaintainer는 개발자 각자의 DB 스키마를 SQL 스크립트를 이용해 자동 으로 유지시켜 주는 기능
+
+* 규칙은 다음과 같다.
+
+  1.  프로젝트 내에 폴더를 하나 만들어서 애플리케이션에서 필요한 DB스크립트를 넣어놓는다.
+
+  2. 이때 DB스크립트는 숫자 형식의 버전넘버를 _(언더바)로 구분지어 갖도록 이름짓는다.
+
+     ex) 예: 001_DROP_ALL_TABLES.sql, 002_CREATE_TABLES.sql
+
+  3.  Unitils의 DataSource를 이용하는 테스트 클래스를 실행한다.
+
+  4.  DBMaintainer는 지정된 스크립트 폴더를 모니터링해서 변경된 내용이 있으면 반영한다
+
+* DB 구조를 SQL 스크립트로 관리하고, 추가내용을 덧붙여 반영하도록 만들 때 매우 유용
+* 스크립트 폴더에 변경분만 넣어주면 끝
+* 모니터링 후 동작하는 방식은 두 가지
+* 만일 새로운 스크립트가 추가된 경우 해당 스크립트만 실행
+* 기존 스크립트가 변경된 경우 스키마를 전체 리셋하고 다시 처음부터 스크립트를 실행 (해당 유저의 스키마가 리셋된다.)
+* 이때 번호가 매겨지지 않은 스크립트는 가장 나중에 실행된다.
+* 필요에 따라 스크립트 폴더들도 번호를 붙여 순차적으로 실행되도록 만들 수 있다.
+
+```typescript
+dbscripts/ 01_production/ 001_initial.sql
+ 						  002_auditing_updates.sql
+ 		   02_latest_dev/ 001_add_user_table.sql
+  						  002_rename_product_id.sql
+```
+
+
+
+#### 6.5.1 DBMaintainer 기능 활성화시키기
+
+* 프로퍼티에 아래와 같이 적용
+
+```properties
+# 프로젝트 홈 아래에 xsd라는 폴더를 만들어서 dataSetStructureGenerator 위치로 지정
+dataSetStructureGenerator.xsd.dirName=xsd
+# DBMaintainer 기능은 기본값으로는 false
+# 적용 범위는 Unitils의 DataSource를 사용하는 모든 테스트 클래스
+updateDataBaseSchema.enabled=true
+# 스크립트 파일들이 존재하는 폴더를 지정
+dbMaintainer.script.locations=src/dbscripts
+# DBMaintainer가 스크립트들을 버전관리하기 위해 사용하는 테이블
+# 최초에는 없기 때문에 자동으로 만들도록 지정
+dbMaintainer.autoCreateExecutedScriptsTable=true
+```
+
+* D 단순히 스키마의 데이터를 업데이트하는 것과 다르다.
+* 다음과 같은 기능을 제공
+  1. 모든 참조키와 Not Null 제약조건을 비활성화(disable)시키기 때문에 INSERT 스크립트 실행을 편리하게 만들어준다. 
+  2. 시퀀스(sequence) 타입들을 높은 숫자로 업데이트시켜 주기 때문에, 테스트 수행 시에 넣게 되는 데이터들의 기본키(primary key) 값을 고정값으로 지정해도 충돌이 나지 않도록 도와준다(시퀀스가 PK 컬럼으로 쓰일 때). 
+  3. 데이터베이스의 구조를 XSD(XML Schema Definition) 파일로 만들어준다. 해당 파일은 이클립스에서 GUI 형태로 볼 수 있다.
+
+![]({{site.url}}/assets/images/tdd7.PNG)
+
+
+
+#### 프레임워크 VS 라이브러리
+
+* 둘 다 재사용을 목적으로 사용
+* 프레임워크는 복잡한 문제를 해결하기 위해 기본 개념적인 구조, 보통 툴이나 컴포넌트들의 집합체를 의미
+
+* 라이브러리는 스포트웨어를 개발하기 위해 사용되는 클래스나 서브루틴들의 집합체
+* 프레임워크가 더 큰 범위
+* 프레임워크는 층을 갖고 라이브러리는 API만을 갖는다.
+* 프레임워크는 층을 따른 데이터의 흐름(flow)이 있다.
+* 라이브러리는 값의 IN/OUT에 가깝다.
+* 따라서 구조를 층으로 나누어 설명하는 그림이 있으면 프레임워크.
+* 개발자가 만든 코드를 시스템이 호출하면 프레임워크
+* 개발자가 직접 API를 호출하면 라이브러리
+
+
+
+
+
+
+
+
+
+
+
+
+
