--- a/_posts/book/tdd/2020-04-29-tdd-04.md
+++ b/_posts/book/tdd/2020-04-29-tdd-04.md
@@ -95,7 +95,7 @@ public void testSavePassword() throws Exception {
 * Mock 객체와 의미가 겹치는데 제라드는 Mock 객체를 좀 더 프레임 워크와 밀접한 형태로 설명하면서 테스트 더블의 하위로 분류함
 * 그러나 대부분 그냥 포괄적이고 보편적으로 Mock이라고 씀. 그냥 알아두면 좋다의 느낌
 
-![]({{site.url}}/assets/images/tdd2.png)
+![]({{site.url}}/assets/images/tdd2.PNG)
 
 
 
@@ -231,7 +231,7 @@ public class StubCoupon implements ICoupon {
 
 * 아래는 페이크 객체의 방식을 그림으로 표현
 
-![]({{site.url}}/assets/images/tdd3.png)
+![]({{site.url}}/assets/images/tdd3.PNG)
 
 * 너무 구현을 하다보면 페이크 객체 자체를 테스트 해야할 정도로 복잡해짐
 * 따라서 페이크 객체를 만들 때는, 적당히 구현. 아니면 Mock 프레임워크를 사용.
@@ -299,12 +299,12 @@ public void testGetOrderPrice_discountableItem() throws Exception {
 
 ##### ** 상태기반 테스트 vs 행위 기반 테스트 **
 
-![]({{site.url}}/assets/images/tdd4.png)
+![]({{site.url}}/assets/images/tdd4.PNG)
 
 * 상태 기반 테스트란 테스트 대상 클래스의 메소드를 호출하고, 그 결과값과 예상값을 비교하는 방식
 * 예를 들어서 setName("신선호")를 호출하면 객체의 속성이 변경된다. 이때 객체의 속성이 원하는 값으로 변경되었는지 getName()으로 확인해보는 방식이다.
 
-![]({{site.url}}/assets/images/tdd5.png)
+![]({{site.url}}/assets/images/tdd5.PNG)
 
 * 댄 노스가 창시자
 
