--- a/_posts/java/2020-04-17-Java개념공부_09.md
+++ b/_posts/java/2020-04-17-Java개념공부_09.md
@@ -102,6 +102,8 @@ ex) 친구한테 연락을 할 경우.
 
 *전화 받을 때까지 전화를 계속 걸음. ====> 동기 + 논블록킹
 
+*이메일 보냈는데 자동 메일 응답을 받음. ====> 비동기 + 논블록킹
+
 
 
 ### 비동기에서 블록킹, 논블록킹
