--- a/_posts/major/os/2020-05-07-os-01.md
+++ b/_posts/major/os/2020-05-07-os-01.md
@@ -6,12 +6,12 @@ categories:
   - 운영체제
 tags:
   - [운영체제]
-last_modified_at: 2020-05-08
+last_modified_at: 2020-05-09
 ---
 
 
 
-# 운영체제
+# 운영체제 - 개요 1
 
 * 컴퓨터 하드웨어 바로 위에 설치되어 사용자 및 다른 모든 소프트웨어와 하드웨어를 연결하는 소프트웨어 계층
 
@@ -196,7 +196,101 @@ last_modified_at: 2020-05-08
 
 
 
+# 운영체제의 개요 - 2
 
+
+
+### 1. 운영체제란 무엇인가?
+
+* 운영체제의 핵심인 커널이 메모리에 상주하는 부분 (좁은 의미)
+* 커널 뿐 아니라 각종 주변 시스템 유틸리티를 포함한 개념(넓은 의미)
+
+
+
+### 2. 운영체제의 목적
+
+* 컴퓨터 시스템의 자원을 효율적으로 관리
+* 자원은 HW, SW 모두 포함한 의미
+* 무조건 효율이 아닌 형평성도 고려
+
+
+
+### 3. 운영체제의 분류
+
+#### 3.1 동시 작업 가능 여부
+
+##### 3.1.1 단일 작업
+
+* 한 번에 하나의 작업만 처리
+
+##### 3.1.2 다중 작업
+
+* 동시에 두 개 이상의 작업 처리
+* 요즘은 모두 다중 작업
+
+
+
+#### 3.2 사용자 수
+
+##### 3.2.1 단일 사용자
+
+* ex) MS Windows
+
+##### 3.2.2 다중 사용자
+
+* ex) UNIX
+
+
+
+#### 3.3 처리방식
+
+##### 3.3.1 일괄 처리
+
+* 작업 요청의 일정량 모아서 한꺼번에 처리
+* 작업이 완전 종료될 때까지 기다려야 함
+* 요즘은 거의 안쓰임
+
+##### 3.3.2 시분할(Time sharing)
+
+* 여러 작업을 수행할 때 컴퓨터 처리 능력을 일정한 시간 단위로 분할하여 사용
+* 일괄 처리 시스템에 비해 짧은 응답 시간을 가짐
+* interactive한 방식
+* 우리가 보통 쓰는 컴퓨터의 방식 (범용 컴퓨터)
+
+##### 3.3.3 실시간
+
+* 정해진 시간 안에 어떠한 일이 반드시 종료됨이 보장되어야 하는 실시간 시스템
+* ex) 원자로/ 공장제어, 미사일 제어 등
+
+
+
+##### 멀티프로세서 : 하나의 컴퓨터에 CPU가 여러 개 붙어 있음을 의미. 우리가 보통 쓰는 건 멀티프로세서이지만 강의에서 가르치는 건 초기의 1개의 CPU가 있다는 가정으로 배움
+
+
+
+### 4. 운영 체제의 예
+
+#### 4.1 유닉스
+
+* C언어로 작성
+* 높은 이식성
+* 최소한의 커널 구조
+* 복잡한 시스템에 맞게 확장 용이
+* 소스 코드 공개
+* 프로그램 개발에 용이
+* 다양한 버전 : Solaris, Linux 등
+* 대용량 서버, 다수의 동시 사용을 위해 만듬
+
+#### 4.2 DOS
+
+* MS 사에서 1981년에 일괄, 단일 사용자를 위해 만듬
+* 이제는 안씀...
+
+#### 4.3 MS Windows
+
+#### 4.4. Handeld device를 위한 OS
+
+* Android, IOS
 
 
 
