--- a/_posts/book/tdd/2020-05-08-tdd-06.md
+++ b/_posts/book/tdd/2020-05-08-tdd-06.md
@@ -73,53 +73,7 @@ at org.junit.Assert.fail(Assert.Java:91)
 * 이는 의도하는 객체의 상태는 같으나 결과는 같은 객체가 다르다고 판정.
 * 따라서 원하는 객체의 상태를 비교하기 위해 필드 값을 비교해야한다.
 
-* 하지만 필드가 많아지만 아래와 같이 다 비교하기에는 불편하다
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+* 하지만 필드가 많아지만 아래와 같이 다 비교하기에는 불편하다.
 
 * IDatabaseTester를 이용하면 DBTestCase를 상속받지 않아도 됨. IDatabaseTester에 이미 DBTestCase가 상속되어 있음.
 * 1- IDatabaseTester에는 DB 연결과 데이터셋 관련 기능이 정의
