--- a/_posts/java/2020-05-08-Java개념공부_10.md
+++ b/_posts/java/2020-05-08-Java개념공부_10.md
@@ -47,6 +47,8 @@ last_modified_at: 2020-05-08
 
 ### 두 개의 차이점
 
+* TDD 책의 경우 DTO로 통칭한다고 함. 요즘
+
 * Core J2EE Patterns 라는 책에서는... Value Object랑 Transfer Object를 동일한 뜻으로 사용
 * Martin Folwer 저서 Patterns of Enterprise Application Architecture에서는 DTO는 메소드 호출 횟수를 줄이기 위해 데이터를 담고 있는 객체. VO는 값이 같으면 동일 Object라고 함.
 * 예시
